--- a/Program & Platform Design/index.html
+++ b/Program & Platform Design/index.html
@@ -8,19 +8,40 @@
 *{margin:0;padding:0;box-sizing:border-box}body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;line-height:1.6;color:#333;background:#f8f9fa}.container{max-width:1200px;margin:0 auto;padding:0 20px}.section{padding:60px 0}nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-filter:blur(10px);z-index:1000;padding:1rem 0;box-shadow:0 2px 20px rgba(0,0,0,.1);transition:all .3s ease}.nav-container{display:flex;justify-content:space-between;align-items:center}.logo{font-size:1.8rem;font-weight:bold;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;text-decoration:none}.nav-links{display:flex;list-style:none;gap:2rem}.nav-links a{text-decoration:none;color:#333;font-weight:500;transition:color .3s ease}.nav-links a:hover{color:#667eea}.cta-button{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:white;padding:.75rem 1.5rem;border-radius:50px;text-decoration:none;font-weight:600;transition:transform .3s ease,box-shadow .3s ease}.cta-button:hover{transform:translateY(-2px);box-shadow:0 10px 25px rgba(102,126,234,.3)}.mobile-menu-btn{display:none;flex-direction:column;cursor:pointer;padding:8px;border-radius:8px;transition:background .3s ease}.mobile-menu-btn:hover{background:rgba(102,126,234,.1)}.mobile-menu-btn span{width:24px;height:3px;background:#333;margin:2.5px 0;transition:all .3s cubic-bezier(.25,.46,.45,.94);border-radius:3px}.mobile-menu-btn.active span:nth-child(1){transform:rotate(-45deg) translate(-5px,6px)}.mobile-menu-btn.active span:nth-child(2){opacity:0;transform:translateX(20px)}.mobile-menu-btn.active span:nth-child(3){transform:rotate(45deg) translate(-5px,-6px)}.mobile-menu{position:fixed;top:80px;left:0;width:100%;background:rgba(255,255,255,.98);backdrop-filter:blur(15px);padding:2rem;box-shadow:0 8px 32px rgba(0,0,0,.12);transform:translateY(-100%);opacity:0;visibility:hidden;transition:all .4s cubic-bezier(.25,.46,.45,.94)}.mobile-menu.active{transform:translateY(0);opacity:1;visibility:visible}.mobile-menu ul{list-style:none;text-align:center}.mobile-menu ul li{margin:1.5rem 0;transform:translateY(20px);opacity:0;transition:all .3s ease}.mobile-menu.active ul li{transform:translateY(0);opacity:1}.mobile-menu ul li a{text-decoration:none;color:#333;font-size:1.2rem;font-weight:500;transition:all .3s ease;padding:.5rem 1rem;border-radius:8px;display:inline-block}.mobile-menu ul li a:hover{color:#667eea;background:rgba(102,126,234,.1)}.hero{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:white;text-align:center;position:relative;overflow:hidden;margin-top:80px}.hero::before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><polygon fill="rgba(255,255,255,0.1)" points="0,0 1000,300 1000,1000 0,700"/></svg>');opacity:0.3}.hero-content{position:relative;z-index:2}.hero h1{font-size:2.8rem;font-weight:700;margin-bottom:16px;line-height:1.2}.hero p{font-size:1.1rem;margin-bottom:24px;max-width:700px;margin-left:auto;margin-right:auto;opacity:0.95}.section-title{font-size:2.2rem;font-weight:700;margin-bottom:16px;color:#667eea;text-align:center}.section-subtitle{font-size:1.1rem;color:#666;margin-bottom:40px;text-align:center;max-width:800px;margin-left:auto;margin-right:auto}.design-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:30px;margin-bottom:50px}.design-card{background:white;padding:30px;border-radius:12px;box-shadow:0 8px 25px rgba(0,0,0,0.1);transition:all 0.3s ease;border-left:4px solid #667eea}.design-card:hover{transform:translateY(-5px);box-shadow:0 15px 35px rgba(0,0,0,0.15)}.card-icon{width:60px;height:60px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);border-radius:12px;display:flex;align-items:center;justify-content:center;margin-bottom:20px;font-size:24px;color:white}.design-card h3{font-size:1.3rem;margin-bottom:12px;color:#667eea;font-weight:600}.design-card p{color:#666;margin-bottom:16px;line-height:1.6}.feature-list{list-style:none}.feature-list li{padding:6px 0;position:relative;padding-left:25px;color:#555}.feature-list li::before{content:'✓';position:absolute;left:0;color:#667eea;font-weight:bold}.approach-section{background:white}.approach-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:25px}.approach-step{background:linear-gradient(135deg,rgba(102,126,234,0.05) 0%,rgba(118,75,162,0.05) 100%);padding:25px;border-radius:12px;text-align:center;position:relative;transition:transform 0.3s ease}.approach-step:hover{transform:translateY(-3px)}.step-number{width:40px;height:40px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);border-radius:50%;display:flex;align-items:center;justify-content:center;color:white;font-size:18px;font-weight:bold;margin:0 auto 15px}.approach-step h4{font-size:1.1rem;margin-bottom:10px;color:#667eea;font-weight:600}.approach-step p{color:#666;font-size:0.95rem}.impact-section{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:white}.impact-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px;text-align:center}.impact-stat{background:rgba(255,255,255,0.1);padding:25px;border-radius:12px;backdrop-filter:blur(10px)}.impact-number{font-size:2.5rem;font-weight:700;margin-bottom:8px}.impact-label{font-size:1.1rem;opacity:0.9}.cta-section{background:#667eea;color:white;text-align:center}.cta-btn{background:white;color:#667eea;padding:12px 30px;border-radius:50px;text-decoration:none;font-weight:600;transition:all 0.3s ease;display:inline-block}.cta-btn:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(0,0,0,0.2)}.footer{background:#2c3e50;color:#ecf0f1;padding:30px 0;text-align:center;font-size:0.9rem}.footer p{margin:0;opacity:0.9}@media (max-width:768px){.container{padding:0 16px}.nav-links,.cta-button{display:none}.mobile-menu-btn{display:flex}.logo{font-size:1.5rem}.hero h1{font-size:2.2rem}.section-title{font-size:1.8rem}.design-grid,.approach-grid{grid-template-columns:1fr}.design-card{padding:25px}.section{padding:40px 0}}
 </style>
 </head>
+@media (max-width:768px){.container{padding:0 16px}.nav-links,.cta-button{display:none}.mobile-menu-btn{display:flex}.logo{font-size:1.5rem}.hero h1{font-size:2.2rem}.section-title{font-size:1.8rem}.design-grid,.approach-grid{grid-template-columns:1fr}.design-card{padding:25px}.section{padding:40px 0}}
+/* Language selector styles (minimal) */
+.language-selector { position: relative; display: inline-flex; align-items: center; margin-left: 20px; margin-right: 20px; }
+.language-btn { background: white; color: #667eea; padding: 6px 12px; border-radius: 50px; border: 2px solid #667eea; cursor: pointer; font-size: 0.9rem; font-weight: 600; display: flex; align-items: center; gap: 6px; }
+.current-lang { text-transform: uppercase; font-weight: 700; letter-spacing: 0.4px; display: inline-block; }
+.language-dropdown { position: absolute; top: 100%; right: 0; margin-top: 8px; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.15); opacity: 0; visibility: hidden; transform: translateY(-10px); transition: all 0.3s ease; z-index: 1000; min-width: 150px; }
+.language-dropdown.active { opacity: 1; visibility: visible; transform: translateY(0); }
+.language-option { padding: 10px 20px; cursor: pointer; transition: all 0.2s ease; display: flex; align-items: center; gap: 8px; color: #333; }
+.language-option:hover { background: rgba(102,126,234,0.1); color: #667eea; }
+.language-option.active { background: rgba(102,126,234,0.1); color: #667eea; font-weight: 500; }
 <body>
 <nav id="navbar">
 <div class="container">
 <div class="nav-container">
-<a href="../" class="logo">ARCLINE ADVISORY</a>
+<a href="../" class="logo" data-translate="site_brand">ARCLINE ADVISORY</a>
 <ul class="nav-links">
-<li><a href="../" onclick="navigateToHome()">Home</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('about')">About</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('services')">Services</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('advisors')">Team</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('contact')">Contact</a></li>
+<li><a href="../" data-translate="nav_home">Home</a></li>
+<li><a href="javascript:void(0)" data-translate="nav_about" onclick="navigateToSection('about')">About</a></li>
+<li><a href="javascript:void(0)" data-translate="nav_services" onclick="navigateToSection('services')">Services</a></li>
+<li><a href="javascript:void(0)" class="active" data-translate="nav_strategic">Strategic Advisory</a></li>
+<li><a href="javascript:void(0)" data-translate="nav_contact" onclick="navigateToSection('contact')">Contact</a></li>
 </ul>
-<a href="javascript:void(0)" onclick="navigateToSection('contact')" class="cta-button">Get Started</a>
+<!-- Language selector -->
+<div class="language-selector">
+    <button class="language-btn" id="languageBtn">
+        <span class="globe-icon">🌐</span>
+        <span class="current-lang" id="currentLang">EN</span>
+    </button>
+    <div class="language-dropdown" id="languageDropdown">
+        <div class="language-option" data-lang="en">English</div>
+        <div class="language-option" data-lang="ka">ქართული</div>
+        <div class="language-option" data-lang="ru">Русский</div>
+    </div>
+</div>
 <div class="mobile-menu-btn" id="mobileMenuBtn">
 <span></span><span></span><span></span>
 </div>
@@ -28,12 +49,18 @@
 </div>
 <div class="mobile-menu" id="mobileMenu">
 <ul>
-<li><a href="../" onclick="navigateToHome()">Home</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('about')">About</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('services')">Services</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('advisors')">Team</a></li>
-<li><a href="javascript:void(0)" onclick="navigateToSection('contact')">Contact</a></li>
+<li><a href="../" data-translate="nav_home" onclick="navigateToHome()">Home</a></li>
+<li><a href="javascript:void(0)" data-translate="nav_about" onclick="navigateToSection('about')">About</a></li>
+<li><a href="javascript:void(0)" data-translate="nav_services" onclick="navigateToSection('services')">Services</a></li>
+<li><a href="javascript:void(0)" class="active" data-translate="nav_strategic">Strategic Advisory</a></li>
+<li><a href="javascript:void(0)" data-translate="nav_contact" onclick="navigateToSection('contact')">Contact</a></li>
 </ul>
+<div style="margin-top:1rem;">
+    <div style="font-weight:700;margin-bottom:.5rem;">Language</div>
+    <div class="language-option" data-lang="en">English</div>
+    <div class="language-option" data-lang="ka">ქართული</div>
+    <div class="language-option" data-lang="ru">Русский</div>
+</div>
 </div>
 </nav>
 
@@ -260,6 +287,72 @@ navbar.style.boxShadow = '0 2px 20px rgba(0, 0, 0, 0.1)';
 
 // Animation Observer
 document.addEventListener('DOMContentLoaded',function(){const observer=new IntersectionObserver((entries)=>{entries.forEach(entry=>{if(entry.isIntersecting){entry.target.style.opacity='1';entry.target.style.transform='translateY(0)';observer.unobserve(entry.target)}})},{threshold:0.1,rootMargin:'0px 0px -50px 0px'});const animatedElements=document.querySelectorAll('.design-card, .approach-step, .impact-stat');animatedElements.forEach((el,index)=>{el.style.opacity='0';el.style.transform='translateY(30px)';el.style.transition=`opacity 0.6s ease ${index*0.1}s, transform 0.6s ease ${index*0.1}s`;observer.observe(el)})});
+
+// Language switcher for subpages — fetches from ../translations/<lang>.json
+function initializeLanguageSwitcher(btnId = 'languageBtn', dropdownId = 'languageDropdown'){
+    const btn = document.getElementById(btnId);
+    const dropdown = document.getElementById(dropdownId);
+    const currentLangEl = document.getElementById('currentLang');
+
+    if(!btn || !dropdown) return;
+
+    btn.addEventListener('click', () => {
+        dropdown.classList.toggle('active');
+    });
+
+    const options = document.querySelectorAll('.language-option[data-lang]');
+    options.forEach(opt => {
+        opt.addEventListener('click', (e) => {
+            const lang = opt.getAttribute('data-lang');
+            if(!lang) return;
+            // update UI
+            if(currentLangEl) currentLangEl.textContent = lang.toUpperCase();
+            document.querySelectorAll('.language-option').forEach(o => o.classList.remove('active'));
+            opt.classList.add('active');
+            dropdown.classList.remove('active');
+            // close mobile menu if open
+            const mobileMenu = document.getElementById('mobileMenu');
+            if(mobileMenu && mobileMenu.classList.contains('active')){
+                mobileMenu.classList.remove('active');
+                document.body.style.overflow = '';
+            }
+            if(window.localStorage) localStorage.setItem('site_lang', lang);
+            changeLanguage(lang);
+        });
+    });
+}
+
+function changeLanguage(lang){
+    const translationsPath = '../translations/' + lang + '.json';
+    fetch(translationsPath).then(r => {
+        if(!r.ok) throw new Error('Failed to load translations: ' + r.status);
+        return r.json();
+    }).then(translations => {
+        // apply to elements
+        document.querySelectorAll('[data-translate]').forEach(el => {
+            const key = el.getAttribute('data-translate');
+            if(translations[key]) el.textContent = translations[key];
+            else console.warn('Missing translation for', key, 'in', lang);
+        });
+        document.querySelectorAll('[data-translate-placeholder]').forEach(el => {
+            const key = el.getAttribute('data-translate-placeholder');
+            if(translations[key]) el.placeholder = translations[key];
+        });
+    }).catch(err => {
+        console.error('Language load error:', err);
+    });
+}
+
+// initialize language switcher on DOMContentLoaded
+document.addEventListener('DOMContentLoaded', () => {
+    initializeLanguageSwitcher();
+    const initial = (localStorage && localStorage.getItem('site_lang')) || 'en';
+    const cur = document.getElementById('currentLang');
+    if(cur) cur.textContent = initial.toUpperCase();
+    const el = document.querySelector('.language-option[data-lang="' + initial + '"]');
+    if(el) el.classList.add('active');
+    changeLanguage(initial);
+});
 </script>
 </body>
 </html>
